clusters/vps/apps/zabbix/zabbix-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-stack
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix
  template:
    metadata:
      labels:
        app: zabbix
    spec:
      containers:
      - name: zabbix-db
        image: postgres:15-alpine
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      - name: zabbix-server
        image: zabbix/zabbix-server-pgsql:latest
      - containerPort: 10051
        hostPort: 10051
        protocol: TCP
        securityContext:
          capabilities:
            add: ["NET_RAW"]
      - name: zabbix-web
        image: zabbix/zabbix-web-nginx-pgsql:latest
      volumes:
      - name: db-data
        hostPath:
          path: /opt/docker/zabbix/db
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-svc
  namespace: zabbix
spec:
  selector:
    app: zabbix
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zabbix-https
  namespace: zabbix
spec:
  entryPoints: [websecure]
  routes:
  - kind: Rule
    match: Host(`zabbix.nasson.co.za`)
    services:
    - name: zabbix-web-svc
      port: 80
  tls: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: zabbix-trapper-svc
#   namespace: zabbix
# spec:
#   type: NodePort
#   selector:
#     app: zabbix # Ensure this matches your Zabbix Server label
#   ports:
#     - name: trapper
#       port: 10051
#       targetPort: 10051
#       nodePort: 10051
